[package]
name = "hubhook"
version = "0.5.0"
edition = "2021"

authors = ["sksat <sksat@arkedgespace.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/arkedge/hubhook"
description = "GitHub notification manager"

[dependencies]
actix-service = "2.0.2"
actix-web = "4.4.0"
crypto-hashes = "0.10.0"
futures = "0.3.28"
hex = "0.4.3"
hmac = "0.12.1"
regex = "1.9.6"
sentry = "0.31.8"
sentry-actix = "0.31.8"
serde = "1.0.189"
serde_json = "1.0.107"
structopt = "0.3.26"
surf = { version = "2.3.2", default-features = false, features = ["h1-client-rustls"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
url = { version = "2.4.1", features = ["serde"]}
