[package]
name = "hubhook"
version = "0.5.0"
edition = "2021"

authors = ["sksat <sksat@arkedgespace.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/arkedge/hubhook"
description = "GitHub notification manager"

[dependencies]
actix-service = "2.0.2"
actix-web = "4.9.0"
crypto-hashes = "0.10.0"
futures = "0.3.30"
hex = "0.4.3"
hmac = "0.12.1"
regex = "1.10.4"
reqwest = { version = "0.12.9", features = ["json"] }
sentry = "0.40.0"
sentry-actix = "0.40.0"
serde = "1.0.200"
serde_json = "1.0.116"
structopt = "0.3.26"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "2.5.0", features = ["serde"]}
